Fix openssh name for ubuntu
TODO abstract names

--- a/roles/openssh-server/tasks/main.yml
+++ b/roles/openssh-server/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Install openssh-server
   become: true
   package: 
-    name: openssh
+    name: openssh-server
     state: present
 
 - name: Start sshd service
