--- a/roles/ntp/tasks/main.yml
+++ b/roles/ntp/tasks/main.yml
@@ -1,13 +1,22 @@
 ---
+- include_vars: "{{ item }}"
+  with_first_found:
+    - "../vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version | int}}.yml"
+    - "../vars/{{ ansible_distribution }}.yml"
+    - "../vars/{{ ansible_os_family }}.yml"
+    - "../vars/default.yml"
+  when: ntp_package_name is not defined or ntp_service_name is not defined
+
 - name: Install ntp
   become: true
   package: 
-    name: ntp
-    state: present
+    name: "{{ ntp_package_name }}"
+    state: latest
+    update_cache: yes
 
 - name: Start ntpd service
   become: true
   service: 
-    name: ntp
+    name: "{{ ntp_service_name }}"
     state: started
     enabled: true
