--- a/roles/openssh-server/tasks/main.yml
+++ b/roles/openssh-server/tasks/main.yml
@@ -1,14 +1,22 @@
 ---
+- include_vars: "{{ item }}"
+  with_first_found:
+    - "../vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version | int}}.yml"
+    - "../vars/{{ ansible_distribution }}.yml"
+    - "../vars/{{ ansible_os_family }}.yml"
+    - "../vars/default.yml"
+  when: openssh_package_name is not defined or openssh_service_name is not defined
+
 - name: Install openssh-server
   become: true
   package: 
-    name: openssh-server
+    name: "{{ openssh_package_name }}"
     state: present
 
 - name: Start sshd service
   become: true
   service: 
-    name: sshd
+    name: "{{ openssh_service_name }}"
     state: started
     enabled: true
 
