--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -9,10 +9,18 @@
 
 # Bug with with_items and include_role so being verbose..
 # https://github.com/ansible/ansible/issues/21285
+#
+- name: Install awscli
+  include_role:
+    name: awscli
 
-  #- name: Install docker
-  #include_role:
-  #  name: docker
+- name: Install cups
+  include_role:
+    name: cups
+
+- name: Install go
+  include_role:
+    name: go
 
 - name: Install iptables
   include_role:
@@ -22,6 +30,10 @@
   include_role:
     name: motd
 
+- name: Install mpd
+  include_role:
+    name: mpd
+
 - name: Install ntp
   include_role:
     name: ntp
@@ -30,13 +42,9 @@
   include_role:
     name: openssh-server
 
-- name: Install awscli
+- name: Install redshift
   include_role:
-    name: awscli
-
-- name: Install go
-  include_role:
-    name: go
+    name: redshift
 
 - name: Install packages
   become: true
@@ -59,6 +67,7 @@
     - htop
     - jq
     - mpv
+    - mpc
     - msmtp
     - mupdf
     - mutt
@@ -67,8 +76,8 @@
     - nodejs
     - npm
     - pass
+    - pwgen
     - pulseaudio
-    - redshift
     - rsync
     - scrot
     - slock
@@ -86,6 +95,7 @@
     - w3m
     - wget
     - xautolock
+    - xf86-video-intel
     - xorg-server
     - xorg-xbacklight
     - xorg-xinit
