--- a/roles/mpd/tasks/main.yml
+++ b/roles/mpd/tasks/main.yml
@@ -7,7 +7,6 @@
     - "../vars/default.yml"
   when: mpd_package_name is not defined
 
-
 - name: Install mpd
   become: true
   package: 
@@ -19,3 +18,9 @@
     name: "{{ mpd_service_name }}"
     enabled: yes
     user: yes
+
+- name: Create music directory
+  file:
+    path: "{{ ansible_env.HOME }}/music"
+    state: directory
+    mode: 0755
