--- a/roles/go/tasks/main.yml
+++ b/roles/go/tasks/main.yml
@@ -13,3 +13,15 @@
     name: "{{ go_package_name }}"
     update_cache: yes
 
+- name: Create go directories
+  file:
+    path: "{{ ansible_env.HOME }}/{{ item }}"
+    state: directory
+    mode: 0755
+  with_items:
+    - go
+    - go/src
+    - go/pkg
+    - go/bin
+
+
