--- a/roles/castget/vars/default.yml
+++ b/roles/castget/vars/default.yml
@@ -1,2 +1,22 @@
 castget_package_name: castget
 castget_service_name: castget
+castget_folders: 
+- this-american-life
+- tms
+- hospital
+- solid-steel
+- drumcode
+- metalheadz
+- datatransmission
+- expansion
+- juno-minimal
+- johnb
+- shogun-audio
+- deepfocus
+- whitenoise
+- resident
+- ukf
+- rinsefm
+- cognicast
+- functional-geekery
+- hansel-minutes
