--- a/roles/redshift/tasks/main.yml
+++ b/roles/redshift/tasks/main.yml
@@ -17,5 +17,6 @@
 - name: Enable and start reshift systemd service
   systemd:
     name: "{{ redshift_service_name }}"
+    state: started
     enabled: yes
     user: yes
