--- a/roles/castget/tasks/main.yml
+++ b/roles/castget/tasks/main.yml
@@ -27,6 +27,18 @@
   with_items:
     - "{{ castget_folders }}"
     
+- name: Copy castget systemd config
+  become: true
+  copy:
+    src: "{{ role_path }}/files/{{ item }}"
+    dest: "{{ ansible_env.HOME }}/.config/systemd/user/{{ item }}"
+    owner: "{{ ansible_env.USER }}"
+    group: "{{ ansible_env.USER }}"
+    mode: 0644
+  with_items:
+    - castget.service
+    - castget.timer
+
 - name: Enable and start castget systemd service
   systemd:
     name: "{{ castget_service_name }}"
