--- a/roles/msmtp/tasks/main.yml
+++ b/roles/msmtp/tasks/main.yml
@@ -16,6 +16,18 @@
   with_fileglob:
     - /usr/share/doc/msmtp/msmtpqueue/*
 
+- name: Copy msmtpq systemd config
+  become: true
+  copy:
+    src: "{{ role_path }}/files/{{ item }}"
+    dest: "{{ ansible_env.HOME }}/.config/systemd/user/{{ item }}"
+    owner: "{{ ansible_env.USER }}"
+    group: "{{ ansible_env.USER }}"
+    mode: 0644
+  with_items:
+    - msmtpq.service
+    - msmtpq.timer
+
 - name: Enable and start msmtpq systemd service
   systemd:
     name: msmtpq
