Move iptables into role

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,9 +1,15 @@
+- name: full system upgrade
+  become: true
+  pacman:
+    update_cache: yes
+    upgrade: yes
+
 - name: Install aur packages
   aur:
     name: "{{ item }}"
     user: "{{ ansible_env.USER }}"
   with_items:
-    - cower
+    #- cower
     - minify
     - st-solarized
     - urlview
@@ -61,8 +67,8 @@
     name: ntp
 
     #- name: Install openssh-server
-    #  include_role:
-    #    name: openssh-server
+    #include_role:
+    #name: openssh-server
 
 - name: Install redshift
   include_role:
@@ -168,61 +174,3 @@
     regexp: '^%wheel'
     line: '%wheel ALL=(ALL) NOPASSWD: ALL'
     validate: visudo -cf %s
-
-- name: Open firewall for established and related connections
-  become: yes
-  iptables:
-    chain: INPUT
-    ctstate: ESTABLISHED,RELATED
-    jump: ACCEPT
-
-- name: Open firewall for ssh
-  become: true
-  iptables:
-    chain: INPUT
-    protocol: tcp
-    destination_port: 22
-    jump: ACCEPT
-
-- name: Open firewall for http
-  become: true
-  iptables:
-    chain: INPUT
-    protocol: tcp
-    destination_port: 80
-    jump: ACCEPT
-
-- name: Open firewall for https
-  become: true
-  iptables:
-    chain: INPUT
-    protocol: tcp
-    destination_port: 443
-    jump: ACCEPT
-
-- name: Open firewall for connections from localhost
-  become: yes
-  iptables:
-    chain: INPUT
-    in_interface: lo
-    jump: ACCEPT
-
-- name: Close firewall for anything else on the INPUT chain
-  become: true
-  iptables:
-    chain: INPUT
-    jump: DROP
-
-- name: Close firewall for anything else on the FORWARD chain
-  become: true
-  iptables:
-    chain: FORWARD
-    jump: DROP
-
-- name: Open firewall for outbound traffic
-  become: true
-  iptables:
-    chain: OUTPUT
-    jump: ACCEPT
-  notify: 
-    - Save iptables
