Update user to scope

--- a/roles/mpd/tasks/main.yml
+++ b/roles/mpd/tasks/main.yml
@@ -17,7 +17,7 @@
   systemd:
     name: "{{ mpd_service_name }}"
     enabled: yes
-    user: yes
+    scope: user
 
 - name: Create music directory
   file:
