--- a/roles/castget/vars/default.yml
+++ b/roles/castget/vars/default.yml
@@ -1,22 +1,19 @@
 castget_package_name: castget
 castget_service_name: castget
 castget_folders: 
-- this-american-life
-- tms
-- hospital
-- solid-steel
-- drumcode
-- metalheadz
+- blockchain-insider
 - datatransmission
+- drumcode
 - expansion
-- juno-minimal
+- hospital
 - johnb
-- shogun-audio
-- deepfocus
-- whitenoise
+- metalheadz
 - resident
-- ukf
 - rinsefm
-- cognicast
-- functional-geekery
-- hansel-minutes
+- solid-steel
+- shogun-audio
+- tms
+- this-american-life
+- whitenoise
+- ukf
+- zero-knowledge
