--- a/roles/isync/tasks/main.yml
+++ b/roles/isync/tasks/main.yml
@@ -29,11 +29,11 @@
   systemd:
     name: "{{ isync_service_name }}"
     enabled: yes
-    user: yes
+    scope: user
 
 - name: Enable and start isync systemd timer
   systemd:
     name: "{{ isync_service_name }}.timer"
     enabled: yes
     state: started
-    user: yes
+    scope: user
