Update to wee-slack-git

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -27,7 +27,7 @@
     - spotify
     - st-solarized
     - tor-browser
-    - wee-slack
+    - wee-slack-git
     - urlview
     - zoom
     - openvpn-reconnect
