--- a/roles/iptables/tasks/main.yml
+++ b/roles/iptables/tasks/main.yml
@@ -24,7 +24,7 @@
   iptables:
     chain: INPUT
     protocol: tcp
-    destination_port: 22
+    destination_port: "22"
     jump: ACCEPT
 
 - name: Open firewall for http
@@ -32,7 +32,7 @@
   iptables:
     chain: INPUT
     protocol: tcp
-    destination_port: 80
+    destination_port: "80"
     jump: ACCEPT
 
 - name: Open firewall for https
@@ -40,7 +40,7 @@
   iptables:
     chain: INPUT
     protocol: tcp
-    destination_port: 443
+    destination_port: "443"
     jump: ACCEPT
 
 - name: Open firewall for connections from localhost
